fix: :lipstick: Fixed block spacing on Details blocks within the wrapper

--- a/blocks/src/details-wrapper/style.scss
+++ b/blocks/src/details-wrapper/style.scss
@@ -7,10 +7,6 @@
 
 .wp-block-ucsc-details-wrapper {
 	width: 100%;
-	
-	.wrapper-spacer {
-		padding-bottom: 1rem
-	}
 	a.expand-collapse:active, a.expand-collapse:focus, a.expand-collapse:hover {
 			color: #32373c;
 		}
@@ -39,6 +35,8 @@
 			content: "\f347";
 		}
 	}
-	
+	.details-block {
+		margin-top: 1rem;
+	}	
 }
 
